# xenon_200_mouse_controller

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
data/: .default  data_explained  default_settings.yml  main_data
profiles/: profile1.yml
scripts/: daemon  daemon.c  kill_daemon.sh  read.sh  without_daemon  without_daemon.c
tests/: bindings_data_test.py  context.py  gui_test.py  help.py  main_data_test.py  test_bindings_data  test_helper.py  test_main_data
xenon_driver/: __init__.py  configuration.py  data.py  data_handler.py  driver.py  gui.py  logger.py  main.py  options.py
xenon_driver/data/: .default  default_settings.yml  reset_data
xenon_driver/gui_resources/: custom_widgets.py  gui_keys.py  gui_parts.py
xenon_driver/macros/: macro2  new  new2  new3  test_cycle_times  test_until_pressed  test_until_released
xenon_driver/profiles/: .yml  eeeehhh.yml  profile3.yml  profile4.yml  profile5.yml  terraria.yml
