[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True
package_dir =
    =.

[options.entry_points]
console_scripts =
    xenon_driver = xenon_driver.main:main

[options.package_data]
xenon_driver = 
    gui_resources/*
    profiles/*
    data/*
    macros/*

[options.packages.find]
where = .

[metadata]
name = xenon_driver
version = attr: xenon_driver.__version__
author = kleist0202
author_email = pk0202@protonmail.com
url = https://github.com/kleist0202/xenon_200_mouse_controller
description = Driver app for xenon 200 mouse
long_description = file: README.md
long_description_content_type = text/markdown
keywords = driver, computer mouse
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
